--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": "^8.1",
         "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0"
+        "illuminate/contracts": "^10.0",
+        "octopyid/laravel-impersonate": "^3.0.3"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
